update the ENV file

--- a/.env-example
+++ b/.env-example
@@ -1,7 +1,7 @@
 SECRET_KEY=APP_SECRET_KEY
 DEBUG=False
-DB_NAME=vgps_local
-DB_USER=vgps_user
-DB_PASSWORD=crewlogix
+DB_NAME=YOUR DB_NAME
+DB_USER=DB USER_NAME
+DB_PASSWORD=DB_USER_PASSWORD
 DB_HOST=127.0.0.1
 DB_PORT = 5432
