--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,19 +1,13 @@
 repos:
-  - repo: https://github.com/ambv/black
+-   repo: https://github.com/ambv/black
     rev: stable
     hooks:
-      - id: black
+    -   id: black
 
-  - repo: https://github.com/pre-commit/pre-commit-hooks
+-   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v1.2.1  # Use the ref you want to point at
     hooks:
-      - id: check-merge-conflict
-      - id: end-of-file-fixer
-      - id: flake8
-        args: [ --max-line-length=123, --max-complexity=10, '--ignore="E722, E203, E266, E501, W503, F403, F401"',--exclude=*/migrations/* ]
-
-  - repo: https://github.com/pycqa/pylint
-    rev: pylint-2.4.4
-    hooks:
-      - id: pylint
-        args: [ --max-line-length=123, "--disable=C0103,E0401,C0415" ]
+    -   id: check-merge-conflict
+    -   id: end-of-file-fixer
+    -   id: flake8
+        args: [--max-line-length=123, '--ignore="E722, E203, E266, E501, W503, F403, F401"',--exclude=*/migrations/*]
