--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,3 +12,9 @@ repos:
       - id: end-of-file-fixer
       - id: flake8
         args: [ --max-line-length=100, --max-complexity=10, '--ignore="E722, E203, E266, E501, W503, F403, F401"',--exclude=*/migrations/* ]
+
+  - repo: https://github.com/pycqa/pylint
+    rev: pylint-2.4.4
+    hooks:
+      - id: pylint
+        args: [ --max-line-length=100, "--disable=C0103,C0415,E0401,R0903,W0613,W0703"]
