--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ POSTGRES_PASSWORD=DB_USER_PASSWORD
 POSTGRES_HOST=127.0.0.1
 POSTGRES_PORT=5432
 SENTRY_DSN=SENTRY_DSN
+ALLOWED_HOSTS=localhost, 127.0.0.1
