--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
-celery==5.0.1
+celery==5.0.2
+django-hashid-field==3.1.3
 django-model-utils==4.0.0
 djangorestframework==3.12.1
 djangorestframework-jwt==1.11.0
 django-celery-beat==2.1.0
 django-celery-results==1.2.1
-Django==3.1.2
+Django==3.1.3
+drf-spectacular==0.10.0
 python-decouple==3.3
 psycopg2-binary==2.8.6
 redis==3.5.3
-sentry-sdk==0.19.1
+sentry-sdk==0.19.2
