--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,7 @@ test:
     - export DATABASE_URL=postgres://postgres:@postgres:5432/$DB_NAME
     - apt-get update -qy
     - apt-get install -y python-dev python-pip
-    - pip install -r requirements/base.txt
+    - pip install -r requirements.txt
     - python manage.py migrate
     - python manage.py test --verbosity=2
 
